<?xml version="1.0" encoding="UTF-8"?>
<!--
   Copyright (c) 2018, 2025, Oracle and/or its affiliates. All rights reserved.

   DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.

   The contents of this file are subject to the terms of either the Universal Permissive License
   v 1.0 as shown at https://oss.oracle.com/licenses/upl

   or the following license:

   Redistribution and use in source and binary forms, with or without modification, are permitted
   provided that the following conditions are met:

   1. Redistributions of source code must retain the above copyright notice, this list of conditions
   and the following disclaimer.

   2. Redistributions in binary form must reproduce the above copyright notice, this list of
   conditions and the following disclaimer in the documentation and/or other materials provided with
   the distribution.

   3. Neither the name of the copyright holder nor the names of its contributors may be used to
   endorse or promote products derived from this software without specific prior written permission.

   THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR
   IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
   FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
   CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
   DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
   DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
   WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY
   WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.openjdk.jmc</groupId>
	<artifactId>agent</artifactId>
	<version>${revision}${changelist}</version>
	<packaging>jar</packaging>
	<name>JDK Mission Control Agent</name>
	<description>The JMC agent allows users to add JFR instrumentation declaratively to a
	    running program. The agent can, for example, be used to add flight recorder events
	    to third party code for which the source is not available.
	</description>
	<url>https://jdk.java.net/jmc</url>
	<licenses>
		<license>
			<name>Universal Permissive License Version 1.0</name>
			<url>https://oss.oracle.com/licenses/upl</url>
			<distribution>repo</distribution>
			<comments>Copyright (c) 2018, 2025, Oracle and/or its affiliates. Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.</comments>
		</license>
	</licenses>
	<organization>
		<name>Oracle</name>
		<url>https://www.oracle.com</url>
	</organization>
	<issueManagement>
		<system>JIRA</system>
		<url>https://bugs.openjdk.org/projects/JMC/issues</url>
	</issueManagement>
	<mailingLists>
		<mailingList>
			<name>jmc dev</name>
			<subscribe>https://mail.openjdk.org/mailman/listinfo/jmc-dev</subscribe>
			<unsubscribe>https://mail.openjdk.org/mailman/listinfo/jmc-dev</unsubscribe>
			<archive>https://mail.openjdk.org/pipermail/jmc-dev/</archive>
		</mailingList>
	</mailingLists>
	<properties>
		<!-- Config -->
		<revision>1.0.1</revision>
		<changelist>-SNAPSHOT</changelist>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<jmc.config.path>${project.basedir}/../configuration</jmc.config.path>
		<!-- Plugin Versions -->
		<maven.checkstyle.version>3.3.0</maven.checkstyle.version>
		<spotless.version>2.34.0</spotless.version>
		<maven.clean.version>3.2.0</maven.clean.version>
		<maven.resources.version>3.3.1</maven.resources.version>
		<maven.compiler.version>3.11.0</maven.compiler.version>
		<maven.surefire.version>3.1.0</maven.surefire.version>
		<maven.jar.version>3.3.0</maven.jar.version>
		<maven.shade.version>3.4.1</maven.shade.version>
		<maven.failsafe.version>3.1.2</maven.failsafe.version>
		<maven.install.version>3.1.1</maven.install.version>
		<nexus.staging.plugin.version>1.6.13</nexus.staging.plugin.version>
		<maven.gpg.version>3.1.0</maven.gpg.version>
		<!-- Dependency Versions -->
		<asm.version>9.7.1</asm.version>
		<junit.version>4.13.2</junit.version>
	</properties>
	<scm>
		<connection>${scmConnection}</connection>
	</scm>
	<distributionManagement>
		<repository>
			<id>jmc-publish</id>
			<url>${release.repo}</url>
		</repository>
		<snapshotRepository>
			<id>jmc-publish-snapshot</id>
			<url>${snapshot.repo}</url>
		</snapshotRepository>
	</distributionManagement>
	<dependencies>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-commons</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-util</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>${maven.clean.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>${maven.resources.version}</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>process-resources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/classes/license</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/license</directory>
									<includes>
										<include>LICENSE.txt</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.version}</version>
				<configuration>
					<argLine>--add-opens java.base/jdk.internal.misc=ALL-UNNAMED -XX:+FlightRecorder</argLine>
					<excludes>
						<exclude>TestDefineEventProbes.java</exclude>
						<exclude>TestCustomClassloader.java</exclude>
						<exclude>TestPermissionChecks.java</exclude>
						<exclude>TestDynamicallyLoadedClasses.java</exclude>
						<exclude>TestRetrieveCurrentTransforms.java</exclude>
						<exclude>TestRetrieveEventProbes.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven.jar.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>${maven.shade.version}</version>
				<configuration>
					<artifactSet>
						<includes>
							<include>org.ow2.asm:*</include>
						</includes>
					</artifactSet>
					<relocations>
						<relocation>
							<pattern>org.objectweb.asm.</pattern>
							<shadedPattern>org.openjdk.jmc.internal.org.objectweb.asm.</shadedPattern>
						</relocation>
					</relocations>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>module-info.class</exclude>
								<exclude>META-INF/MANIFEST.MF</exclude>
							</excludes>
						</filter>
					</filters>
					<transformers>
						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<manifestEntries>
								<Automatic-Module-Name>org.openjdk.jmc.agent</Automatic-Module-Name>
								<Agent-Class>org.openjdk.jmc.agent.Agent</Agent-Class>
								<Premain-Class>org.openjdk.jmc.agent.Agent</Premain-Class>
								<Can-Retransform-Classes>true</Can-Retransform-Classes>
								<Bundle-RequiredExecutionEnvironment>JavaSE-17</Bundle-RequiredExecutionEnvironment>
								<Built-By></Built-By>
							</manifestEntries>
						</transformer>
					</transformers>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven.failsafe.version}</version>
				<executions>
					<execution>
						<id>test-permissions</id>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
						<configuration>
							<argLine>
							    -Djava.security.manager -Djdk.io.permissionsUseCanonicalPath=true -Djava.security.policy=target/test-classes/org/openjdk/jmc/agent/test/failing_control_permission.policy
							    -XX:+FlightRecorder -javaagent:target/agent-${revision}${changelist}.jar=target/test-classes/org/openjdk/jmc/agent/test/jfrprobes_template.xml
							    -cp target/agent-${revision}${changelist}.jar:target/test-classes/
							</argLine>
							<includes>TestPermissionChecks.java</includes>
						</configuration>
					</execution>
					<execution>
						<id>test-retransform</id>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
						<configuration>
							<argLine>
							    -XX:+FlightRecorder -javaagent:target/agent-${revision}${changelist}.jar=target/test-classes/org/openjdk/jmc/agent/test/jfrprobes_template.xml
							    -cp target/agent-${revision}${changelist}.jar:target/test-classes/
							</argLine>
							<includes>TestDefineEventProbes.java</includes>
						</configuration>
					</execution>
					<execution>
						<id>test-custom-classloader</id>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
						<configuration>
							<argLine>
							    -XX:+FlightRecorder -javaagent:target/agent-${revision}${changelist}.jar=target/test-classes/org/openjdk/jmc/agent/test/jfrprobes_simple_2.xml
							    -cp target/agent-${revision}${changelist}.jar:target/test-classes/
							</argLine>
							<includes>TestCustomClassloader.java</includes>
						</configuration>
					</execution>
					<execution>
						<id>test-retrieve-event-probes</id>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
						<configuration>
							<argLine>-XX:+FlightRecorder -javaagent:target/agent-${revision}${changelist}.jar -cp target/agent-${revision}${changelist}.jar:target/test-classes/</argLine>
							<includes>TestRetrieveEventProbes.java</includes>
						</configuration>
					</execution>
					<execution>
						<id>test-dynamically-loaded-classes</id>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
						<configuration>
							<argLine>-XX:+FlightRecorder -javaagent:target/agent-${revision}${changelist}.jar -cp target/agent-${revision}${changelist}.jar:target/test-classes/</argLine>
							<includes>TestDynamicallyLoadedClasses.java</includes>
						</configuration>
					</execution>
					<execution>
						<id>test-retrieve-transforms</id>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
						<configuration>
							<argLine>
							    -XX:+FlightRecorder -javaagent:target/agent-${revision}${changelist}.jar=target/test-classes/org/openjdk/jmc/agent/test/jfrprobes_simple.xml
							    -cp target/agent-${revision}${changelist}.jar:target/test-classes/
							</argLine>
							<includes>TestRetrieveCurrentTransforms.java</includes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>${maven.install.version}</version>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>${nexus.staging.plugin.version}</version>
				<extensions>true</extensions>
				<configuration>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>${maven.checkstyle.version}</version>
				<configuration>
					<configLocation>${jmc.config.path}/checkstyle/checkstyle.xml</configLocation>
					<includeTestSourceDirectory>true</includeTestSourceDirectory>
					<inputEncoding>UTF-8</inputEncoding>
					<consoleOutput>true</consoleOutput>
					<failsOnError>true</failsOnError>
				</configuration>
				<executions>
					<execution>
					<id>validate</id>
					<phase>validate</phase>
					<goals>
						<goal>check</goal>
					</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>${maven.gpg.version}</version>
				<configuration>
					<!-- Prevent gpg from using pinentry programs -->
					<gpgArguments>
						<arg>--pinentry-mode</arg>
						<arg>loopback</arg>
					</gpgArguments>
				</configuration>
				<executions>
					<execution>
						<id>gpg-sign</id>
						<phase>deploy</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>${spotless.version}</version>
				<configuration>
					<java>
						<eclipse>
							<file>${jmc.config.path}/ide/eclipse/formatting/formatting.xml</file>
	 						<version>4.8.0</version>
 						</eclipse>
					</java>
				</configuration>
				<executions>
					<execution>
						<id>check</id>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
